--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^10.0.0",
+    "base-64": "^1.0.0",
+    "next": "^10.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
