--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "base-64": "^1.0.0",
     "next": "^10.0.4",
+    "query-string": "^6.13.7",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
