--- a/package.json
+++ b/package.json
@@ -1,17 +1,43 @@
 {
-  "name": "learn-starter",
-  "version": "0.1.0",
+  "name": "walkmore",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "node ./bin/www",
+    "dev": "nodemon app"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.1.0",
+    "@doweb/vuexpress": "^1.1.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "base-64": "^1.0.0",
-    "next": "^10.0.4",
-    "query-string": "^6.13.7",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "cookie-parser": "~1.4.4",
+    "css-loader": "^5.0.1",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "express-session": "^1.17.1",
+    "googleapis": "^66.0.0",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "jwt-decode": "^3.1.2",
+    "mini-css-extract-plugin": "^1.3.3",
+    "morgan": "~1.9.1",
+    "node-fetch": "^2.6.1",
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^4.1.0",
+    "sass-loader": "^10.1.0",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.6.0",
+    "webpack": "^5.11.1",
+    "webpack-merge": "^5.7.3",
+    "webpack-node-externals": "^2.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
